<resources>
    <string name="app_name">ALC</string>
    <string name="to_activity_c">To Activity C</string>
    <string name="to_activity_b">To Activity B</string>
    <string name="alc_challenge_1">ALC CHALLENGE 1</string>
    <string name="_255_685_097_713">Phone : (+255)685 097 713</string>
    <string name="nicky_nickylegnard_com">Email : nicky@nickylegnard.com</string>
    <string name="tanzania">Country : Tanzania</string>
    <string name="android_track">Track : Android Track</string>
    <string name="name_nicholaus_ngailo_legnard">Name : Nicholaus Ngailo Legnard</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
</resources>
