<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alc_challenge_1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttonToActivityB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/about_alc"/>
        <Button
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttonToActivityC"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            />

    </LinearLayout>
</RelativeLayout>